# NimbleAnalyzer2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  inno_setup_script.iss  setup.bat
res/: Thumbs.db
res/projects/0421 Xe-µJoule/: 0421-000415_LS06-2232676_µJoule_2025-07-03_1201.csv  2463411_µJoule_2025-08-19_1029.csv  LS06 0421 0601 Xe-µJoule_Wareneingangsmessung.xlsx.ini  data.xlsx.ini  merges.na  project.na  sheets.na
res/projects/0421 Xe-µJoule/old/: .pro  0421_Xe-µJoule_WE_EndQC.xlsx.ini  LS06 0421 0601 Xe-µJoule_Wareneingangsmessung.xlsx.ini
res/projects/0430 Xe-µJoule/: 0202 0430 Xe-µJoule_Wareneingangsmessung.xlsx.ini  0202-3768_µJoule_2025-06-26_0824.csv  0430-005097_0202-3992_µJoule_2025-06-18_1109.csv  merges.na  project.na  sheets.na
res/projects/0430 Xe-µJoule/old/: .pro  0202 0430 Xe-µJoule_Wareneingangsmessung.xlsx.ini  0430_Xe-µJoule_WE_EndQC.xlsx.ini
res/projects/0472 Xe-µJoule/: .pro  0203 0472 Xe-µJoule_Wareneingangsmessung.xlsx.ini  0203-0039_µJoule_2025-06-26_1257.csv  0472-002077_0203-1045_µJoule_2025-06-17_0843.csv  merges.na  project.na  sheets.na
res/projects/0472 Xe-µJoule/old/: .pro  0203 0472 Xe-µJoule_Wareneingangsmessung.xlsx.ini  0472_Xe-µJoule_WE_EndQC.xlsx.ini
res/projects/BMG0X/: Template_µJoule_2025-09-25_1429.csv  merges.na  project.na  sheets.na
res/projects/BMG0X/old/: .pro  BMG01 Xe-µJoule_Wareneingangsmessung.xlsx.ini  BMG02 Xe-µJoule_Wareneingangsmessung.xlsx.ini
res/projects/test/: merges.na  project.na  sheets.na
res/projects/ü/: merges.na  project.na  sheets.na
src/: NimbleAnalyzer.cpp  NimbleAnalyzer.h  app.cpp  app.h  fileDialog.h  fileloader.cpp  fileloader.h  logging.cpp  logging.h  main.cpp  project.cpp  project.h  ressourcemanager.cpp  ressourcemanager.h  themes.cpp  themes.h  utils.cpp  utils.h
testfiles/: Real_Test.xlsx  test.csv  testfile_µ.xlsx
testfiles/import/: Serial.xlsx  Values.xlsx
testfiles/import/mergefolder/: Values - Kopie - Kopie - Kopie - Kopie.xlsx  Values - Kopie - Kopie - Kopie.xlsx  Values - Kopie - Kopie.xlsx  Values - Kopie.xlsx  Values.xlsx
